k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-demo
  namespace: nissastigen
  labels:
    team: secops-ninjas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops-demo
  template:
    metadata:
      labels:
        app: devsecops-demo
        team: secops-ninjas
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: devsecops-demo
          image: devsecops-demo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
