k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-demo-service
  namespace: nissastigen
spec:
  selector:
    app: devsecops-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
