k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-except-app
  namespace: nissastigen
spec:
  podSelector:
    matchLabels:
      app: devsecops-demo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 5000
  egress:
    - {} # Allow all egress for simplicity, men ingress är nu restriktivt
